# edep-sim

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  ChangeLog  Doxyfile.in  EDepSimConfig.cmake.in  LICENSE  PackageConfig.cmake.in  README.md  RELEASE.3.1.0  RELEASE.3.2.0  RELEASE.4.0.0  RELEASE.4.1.0  RELEASE.4.2.0  RELEASE.4.3.0  setup.sh
app/: CMakeLists.txt  detSim.cc  edepSim.cc
check.d/: 100GPSMuon5GeVThru.sh  200GPSMuon5GeVThru.sh  900GPSMuon5GeVThru.sh  root900GPSMuon5GeVThru.C
cmt/: requirements  version.cmt
display/: CMakeLists.txt  README  TEventChangeManager.cxx  TEventChangeManager.hxx  TEventDisplay.cxx  TEventDisplay.hxx  TEventManager.hxx  TG4HitChangeHandler.cxx  TG4HitChangeHandler.hxx  TG4PhotonHitChangeHandler.cxx  TG4PhotonHitChangeHandler.hxx  TGUIManager.cxx  TGUIManager.hxx  TMatrixElement.cxx  TMatrixElement.hxx  TRecurseGeoManager.hxx  TTrajectoryChangeHandler.cxx  TTrajectoryChangeHandler.hxx  TVEventChangeHandler.hxx  edepdisp_LinkDef.h  eventDisplay.cxx
doc/: DETECTOR.md  KINEMATICS.md  OUTPUT.md  detSimAlignment.dox  detSimGPS.dox  detSimHistory.dox  detsim-command.list  edepsim-command.list  edepsim-particles.list  mainpage.dox  p0dMeasuredScintillator.cxx
examples/ExternalKinematics/: CMakeLists.txt  local_setup.sh
examples/ExternalKinematics/src/: ExampleKinematicsGenerator.cc  ExampleKinematicsGenerator.hh
inputs/: Module0.gdml  atree-captain.mac  atree-mini-captain.mac  beam-10.mac  detsim-command.list  detsim-commands-text.sh  detsim-double-particle-gun.sh  detsim-export-geometry.sh  detsim-single-electron.sh  detsim-single-particle-gun.sh  detsim-standard-geometries.sh  detsim-test-randomseed.sh  detsim-triple-particle-gun.sh  double-particle-gun.mac  electron-001.mac  electron-600.mac  example.gdml  external-kinem.mac  genie-example.mac  lansce-monoenergetic.sh  mini-muon-200.mac  muon-100.mac  muon-10000.mac  muon-200.mac  muon-burst-10000.mac  muon-cone-10000.mac  optical-photons.mac  proton-300.mac  raytrace-captain.mac  raytrace-mcapt-tpc.mac  raytrace-mini-captain.mac  raytrace.mac  rooTracker-overlay.mac  scintillation.mac  single-particle-gun.mac  triple-particle-gun.mac  update.mac  visual-detector.mac
io/: CMakeLists.txt  EDepSimUnits.h  TG4Event.cxx  TG4Event.h  TG4HitSegment.cxx  TG4HitSegment.h  TG4PhotonHit.cxx  TG4PhotonHit.h  TG4PrimaryVertex.h  TG4Trajectory.cxx  TG4Trajectory.h  edepsim_io_LinkDef.h
licenses/: LICENSE.nest
sElec/: TSimplisticElec.cxx  TSimplisticElec.hxx  simplisticElec.cxx
scripts/: detsim-commands-html.sh  detsim-control  detsim-lansce-beam-full  detsim-lansce-beam-high  detsim-lansce-beam-medium  detsim-lansce-monoenergetic  detsim-standard-geometries.sh  edepsim-commands-html.sh  (+3 more)
src/: CMakeLists.txt  DSimBuilder.cc  DSimBuilder.hh  DSimComponentBuilder.hh  DSimCreateRunManager.cc  DSimCreateRunManager.hh  DSimDetectorMessenger.cc  DSimDetectorMessenger.hh  DSimDokeBirks.cc  DSimDokeBirks.hh  DSimEMField.cc  DSimEMField.hh  DSimException.hh  DSimExtraPhysics.cc  DSimExtraPhysics.hh  DSimHitSegment.cc  DSimHitSegment.hh  DSimLog.hh  DSimLogManager.cc  DSimMagneticField.cc  DSimMagneticField.hh  DSimModuleBuilder.cc  DSimModuleBuilder.hh  DSimPersistencyManager.cc  DSimPersistencyManager.hh  DSimPersistencyMessenger.cc  DSimPersistencyMessenger.hh  DSimPhysicsList.cc  DSimPhysicsList.hh  DSimPhysicsListMessenger.cc  DSimPhysicsListMessenger.hh  DSimRootGeometryManager.cc  DSimRootGeometryManager.hh  DSimRootPersistencyManager.cc  DSimRootPersistencyManager.hh  DSimSDFactory.cc  DSimSDFactory.hh  DSimSegmentSD.cc  DSimSegmentSD.hh  DSimTrajectory.cc  (+150 more)
src/NESTVersion098/: G4S1Light.cc  G4S1Light.hh  G4S2Light.cc  G4S2Light.hh  G4ThermalElectron.cc  G4ThermalElectron.hh
src/captain/: CaptCryostatBuilder.cc  CaptCryostatBuilder.hh  CaptDriftRegionBuilder.cc  CaptDriftRegionBuilder.hh  CaptExposedBuilder.cc  CaptExposedBuilder.hh  CaptImmersedBuilder.cc  CaptImmersedBuilder.hh  CaptMaterialDefinitions.cc  CaptMaterialDefinitions.hh  CaptPMTAssemblyBuilder.cc  CaptPMTAssemblyBuilder.hh  CaptPMTBuilder.cc  CaptPMTBuilder.hh  CaptWirePlaneBuilder.cc  CaptWirePlaneBuilder.hh  CaptWorldBuilder.cc  CaptWorldBuilder.hh  MiniCaptExposedBuilder.cc  MiniCaptExposedBuilder.hh  MiniCaptImmersedBuilder.cc  MiniCaptImmersedBuilder.hh  MiniCaptPMTAssemblyBuilder.cc  MiniCaptPMTAssemblyBuilder.hh  captain-inner-vessel-inner-boundary.txt  captain-inner-vessel-outer-boundary.txt  captain-outer-vessel-inner-boundary.txt  captain-outer-vessel-outer-boundary.txt  captainInnerVessel.hxx  captainOuterVessel.hxx  makePolycone.py  mcaptain-inner-vessel-inner-surface.txt  mcaptain-inner-vessel-outer-surface.txt  mcaptain-outer-vessel-inner-surface.txt  mcaptain-outer-vessel-outer-surface.txt  miniCaptainInnerVessel.hxx  miniCaptainOuterVessel.hxx
src/kinem/: DSimCombinationGenerator.cc  DSimCombinationGenerator.hh  DSimDensityPositionFactory.cc  DSimDensityPositionFactory.hh  DSimDensityPositionGenerator.cc  DSimDensityPositionGenerator.hh  DSimFixedCountFactory.cc  DSimFixedCountFactory.hh  DSimFixedCountGenerator.cc  DSimFixedCountGenerator.hh  DSimFixedPositionFactory.cc  DSimFixedPositionFactory.hh  DSimFixedPositionGenerator.cc  DSimFixedPositionGenerator.hh  DSimFixedTimeFactory.cc  DSimFixedTimeFactory.hh  DSimFixedTimeGenerator.cc  DSimFixedTimeGenerator.hh  DSimFreePositionFactory.cc  DSimFreePositionFactory.hh  DSimFreePositionGenerator.cc  DSimFreePositionGenerator.hh  DSimGPSKinematicsFactory.cc  DSimGPSKinematicsFactory.hh  DSimGPSKinematicsGenerator.cc  DSimGPSKinematicsGenerator.hh  DSimKinemPassThrough.cc  DSimKinemPassThrough.hh  DSimMeanCountFactory.cc  DSimMeanCountFactory.hh  DSimMeanCountGenerator.cc  DSimMeanCountGenerator.hh  DSimNuMIRockKinematicsFactory.cc  DSimNuMIRockKinematicsFactory.hh  DSimNuMIRockKinematicsGenerator.cc  DSimNuMIRockKinematicsGenerator.hh  DSimPrimaryGenerator.cc  DSimPrimaryGenerator.hh  DSimRooTrackerKinematicsFactory.cc  DSimRooTrackerKinematicsFactory.hh  (+109 more)
src/kinem/ParticleBomb/: ParticleBombFactory.cc  ParticleBombGenerator.cc  ParticleBombGenerator.hh
(+153 files in other folders)
